# domino-chain-calculator

./: .gitignore  Pipfile  README.md  domino-chain-calculator.py  dominoes.json  dominoes.txt  pyproject.toml  requirements.txt
assets/: description.txt
dominoes/: __init__.py  domino.py  dominotree.py  dominoutil.py  model.py  possibilities.py  routes.py  schema.py  types.py
tests/: test_dominoutil.py
