[tool.poetry]
name = "domino-chain-calculator"
version = "0.1.0"
description = ""
authors = ["Justin Sexton <justinsexton.dev@gmail.com>"]
readme = "README.md"
packages = [{ include = "domino_chain_calculator" }]

[tool.poetry.dependencies]
python = "^3.11"
anytree = "^2.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
